Fixed URI to fetch the latest release version in all cases